fix: middleware, auth login logout, and get user data
